# mistral-pdf-extraction

./: .gitignore  README.md  config.yml  ingest.py  pyproject.toml
exteract/: paths.py  utils.py
exteract/llm/: llm.py
notebooks/: 01_init.ipynb  02_pdf.ipynb
